--- a/NeuralNetExercise.ipynb
+++ b/NeuralNetExercise.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "NeuralNetExercise.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMwnk/oFbx/LfGxZoxFACBE",
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPmDcrNqZ7mfQghmHrHW8Ov",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,10 +35,190 @@
         "id": "aowoE-ZN0zzn"
       },
       "source": [
-        ""
+        "import numpy\n",
+        "import pandas\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import Dense\n",
+        "from keras.wrappers.scikit_learn import KerasClassifier\n",
+        "from keras.utils import np_utils\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.model_selection import KFold\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.pipeline import Pipeline"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 424
+        },
+        "id": "c87rM43l3nvo",
+        "outputId": "70eaf756-4fc5-49a0-d6ba-c33d366285dc"
+      },
+      "source": [
+        "pandas.read_csv(\"./iris.csv\")"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>5.1</th>\n",
+              "      <th>3.5</th>\n",
+              "      <th>1.4</th>\n",
+              "      <th>0.2</th>\n",
+              "      <th>Iris-setosa</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>4.9</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>Iris-setosa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>4.7</td>\n",
+              "      <td>3.2</td>\n",
+              "      <td>1.3</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>Iris-setosa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>4.6</td>\n",
+              "      <td>3.1</td>\n",
+              "      <td>1.5</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>Iris-setosa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>5.0</td>\n",
+              "      <td>3.6</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>Iris-setosa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5.4</td>\n",
+              "      <td>3.9</td>\n",
+              "      <td>1.7</td>\n",
+              "      <td>0.4</td>\n",
+              "      <td>Iris-setosa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>144</th>\n",
+              "      <td>6.7</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.2</td>\n",
+              "      <td>2.3</td>\n",
+              "      <td>Iris-virginica</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>145</th>\n",
+              "      <td>6.3</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>1.9</td>\n",
+              "      <td>Iris-virginica</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>146</th>\n",
+              "      <td>6.5</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.2</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>Iris-virginica</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>147</th>\n",
+              "      <td>6.2</td>\n",
+              "      <td>3.4</td>\n",
+              "      <td>5.4</td>\n",
+              "      <td>2.3</td>\n",
+              "      <td>Iris-virginica</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>148</th>\n",
+              "      <td>5.9</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.1</td>\n",
+              "      <td>1.8</td>\n",
+              "      <td>Iris-virginica</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>149 rows × 5 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     5.1  3.5  1.4  0.2     Iris-setosa\n",
+              "0    4.9  3.0  1.4  0.2     Iris-setosa\n",
+              "1    4.7  3.2  1.3  0.2     Iris-setosa\n",
+              "2    4.6  3.1  1.5  0.2     Iris-setosa\n",
+              "3    5.0  3.6  1.4  0.2     Iris-setosa\n",
+              "4    5.4  3.9  1.7  0.4     Iris-setosa\n",
+              "..   ...  ...  ...  ...             ...\n",
+              "144  6.7  3.0  5.2  2.3  Iris-virginica\n",
+              "145  6.3  2.5  5.0  1.9  Iris-virginica\n",
+              "146  6.5  3.0  5.2  2.0  Iris-virginica\n",
+              "147  6.2  3.4  5.4  2.3  Iris-virginica\n",
+              "148  5.9  3.0  5.1  1.8  Iris-virginica\n",
+              "\n",
+              "[149 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mBnYAQbC3331"
+      },
+      "source": [
+        "# New Section"
+      ]
     }
   ]
 }
