--- a/NeuralNetExercise.ipynb
+++ b/NeuralNetExercise.ipynb
@@ -7,7 +7,6 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPmDcrNqZ7mfQghmHrHW8Ov",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,18 +34,19 @@
         "id": "aowoE-ZN0zzn"
       },
       "source": [
-        "import numpy\n",
-        "import pandas\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
         "from keras.models import Sequential\n",
         "from keras.layers import Dense\n",
         "from keras.wrappers.scikit_learn import KerasClassifier\n",
         "from keras.utils import np_utils\n",
+        "from sklearn.datasets import load_iris\n",
         "from sklearn.model_selection import cross_val_score\n",
         "from sklearn.model_selection import KFold\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from sklearn.pipeline import Pipeline"
       ],
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -54,18 +54,22 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 419
         },
         "id": "c87rM43l3nvo",
-        "outputId": "70eaf756-4fc5-49a0-d6ba-c33d366285dc"
+        "outputId": "33eed460-ac17-46cf-ad11-fc979cb57b96"
       },
       "source": [
-        "pandas.read_csv(\"./iris.csv\")"
+        "iris = load_iris()\n",
+        "\n",
+        "df = pd.DataFrame(iris['data'], columns=iris['feature_names'])\n",
+        "df['target'] = iris['target']\n",
+        "display(df)"
       ],
       "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
+          "output_type": "display_data",
           "data": {
             "text/html": [
               "<div>\n",
@@ -86,53 +90,53 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>5.1</th>\n",
-              "      <th>3.5</th>\n",
-              "      <th>1.4</th>\n",
-              "      <th>0.2</th>\n",
-              "      <th>Iris-setosa</th>\n",
+              "      <th>sepal length (cm)</th>\n",
+              "      <th>sepal width (cm)</th>\n",
+              "      <th>petal length (cm)</th>\n",
+              "      <th>petal width (cm)</th>\n",
+              "      <th>target</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
+              "      <td>5.1</td>\n",
+              "      <td>3.5</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
               "      <td>4.9</td>\n",
               "      <td>3.0</td>\n",
               "      <td>1.4</td>\n",
               "      <td>0.2</td>\n",
-              "      <td>Iris-setosa</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1</th>\n",
+              "      <th>2</th>\n",
               "      <td>4.7</td>\n",
               "      <td>3.2</td>\n",
               "      <td>1.3</td>\n",
               "      <td>0.2</td>\n",
-              "      <td>Iris-setosa</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2</th>\n",
+              "      <th>3</th>\n",
               "      <td>4.6</td>\n",
               "      <td>3.1</td>\n",
               "      <td>1.5</td>\n",
               "      <td>0.2</td>\n",
-              "      <td>Iris-setosa</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
+              "      <th>4</th>\n",
               "      <td>5.0</td>\n",
               "      <td>3.6</td>\n",
               "      <td>1.4</td>\n",
               "      <td>0.2</td>\n",
-              "      <td>Iris-setosa</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>5.4</td>\n",
-              "      <td>3.9</td>\n",
-              "      <td>1.7</td>\n",
-              "      <td>0.4</td>\n",
-              "      <td>Iris-setosa</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -143,71 +147,70 @@
               "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>144</th>\n",
+              "      <th>145</th>\n",
               "      <td>6.7</td>\n",
               "      <td>3.0</td>\n",
               "      <td>5.2</td>\n",
               "      <td>2.3</td>\n",
-              "      <td>Iris-virginica</td>\n",
+              "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>145</th>\n",
+              "      <th>146</th>\n",
               "      <td>6.3</td>\n",
               "      <td>2.5</td>\n",
               "      <td>5.0</td>\n",
               "      <td>1.9</td>\n",
-              "      <td>Iris-virginica</td>\n",
+              "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>146</th>\n",
+              "      <th>147</th>\n",
               "      <td>6.5</td>\n",
               "      <td>3.0</td>\n",
               "      <td>5.2</td>\n",
               "      <td>2.0</td>\n",
-              "      <td>Iris-virginica</td>\n",
+              "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>147</th>\n",
+              "      <th>148</th>\n",
               "      <td>6.2</td>\n",
               "      <td>3.4</td>\n",
               "      <td>5.4</td>\n",
               "      <td>2.3</td>\n",
-              "      <td>Iris-virginica</td>\n",
+              "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>148</th>\n",
+              "      <th>149</th>\n",
               "      <td>5.9</td>\n",
               "      <td>3.0</td>\n",
               "      <td>5.1</td>\n",
               "      <td>1.8</td>\n",
-              "      <td>Iris-virginica</td>\n",
+              "      <td>2</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>149 rows × 5 columns</p>\n",
+              "<p>150 rows × 5 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "     5.1  3.5  1.4  0.2     Iris-setosa\n",
-              "0    4.9  3.0  1.4  0.2     Iris-setosa\n",
-              "1    4.7  3.2  1.3  0.2     Iris-setosa\n",
-              "2    4.6  3.1  1.5  0.2     Iris-setosa\n",
-              "3    5.0  3.6  1.4  0.2     Iris-setosa\n",
-              "4    5.4  3.9  1.7  0.4     Iris-setosa\n",
-              "..   ...  ...  ...  ...             ...\n",
-              "144  6.7  3.0  5.2  2.3  Iris-virginica\n",
-              "145  6.3  2.5  5.0  1.9  Iris-virginica\n",
-              "146  6.5  3.0  5.2  2.0  Iris-virginica\n",
-              "147  6.2  3.4  5.4  2.3  Iris-virginica\n",
-              "148  5.9  3.0  5.1  1.8  Iris-virginica\n",
+              "     sepal length (cm)  sepal width (cm)  ...  petal width (cm)  target\n",
+              "0                  5.1               3.5  ...               0.2       0\n",
+              "1                  4.9               3.0  ...               0.2       0\n",
+              "2                  4.7               3.2  ...               0.2       0\n",
+              "3                  4.6               3.1  ...               0.2       0\n",
+              "4                  5.0               3.6  ...               0.2       0\n",
+              "..                 ...               ...  ...               ...     ...\n",
+              "145                6.7               3.0  ...               2.3       2\n",
+              "146                6.3               2.5  ...               1.9       2\n",
+              "147                6.5               3.0  ...               2.0       2\n",
+              "148                6.2               3.4  ...               2.3       2\n",
+              "149                5.9               3.0  ...               1.8       2\n",
               "\n",
-              "[149 rows x 5 columns]"
+              "[150 rows x 5 columns]"
             ]
           },
           "metadata": {
             "tags": []
-          },
-          "execution_count": 6
+          }
         }
       ]
     },
