created test set training set and val

--- a/NeuralNetExercise.ipynb
+++ b/NeuralNetExercise.ipynb
@@ -46,7 +46,7 @@
         "from sklearn.preprocessing import LabelEncoder\n",
         "from sklearn.pipeline import Pipeline"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
         "df['target'] = iris['target']\n",
         "display(df)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -213,6 +213,36 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O7RtypFBAZx3"
+      },
+      "source": [
+        "X = df.drop('target',axis=1)\n",
+        "t = df['target']\n",
+        "\n",
+        "X_train, X_test, t_train, t_test = train_test_split(X, t, test_size=0.3, random_state=0)\n",
+        "X_train2, X_val, t_train2, t_val = train_test_split(X_train, t_train, test_size=0.3, random_state=0)"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BCK9t5USAkjb"
+      },
+      "source": [
+        "n = 0.25\n",
+        "nepochs = 35\n",
+        "train_accuracy = []\n",
+        "val_accuracy = []\n",
+        "w = [1, 1, 1]"
+      ],
+      "execution_count": 17,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
