Cleaned up imports

--- a/NeuralNetExercise.ipynb
+++ b/NeuralNetExercise.ipynb
@@ -31,42 +31,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aowoE-ZN0zzn"
-      },
-      "source": [
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "from keras.models import Sequential\n",
-        "from keras.layers import Dense\n",
-        "from keras.wrappers.scikit_learn import KerasClassifier\n",
-        "from keras.utils import np_utils\n",
-        "from sklearn.datasets import load_iris\n",
-        "from sklearn.model_selection import cross_val_score\n",
-        "from sklearn.model_selection import KFold\n",
-        "from sklearn.preprocessing import LabelEncoder\n",
-        "from sklearn.pipeline import Pipeline"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 419
+          "height": 424
         },
         "id": "c87rM43l3nvo",
-        "outputId": "33eed460-ac17-46cf-ad11-fc979cb57b96"
+        "outputId": "9e616844-4872-48b2-f126-b070c41ea3f0"
       },
       "source": [
+        "import pandas as pd\n",
+        "from sklearn.datasets import load_iris\n",
+        "\n",
         "iris = load_iris()\n",
         "\n",
         "df = pd.DataFrame(iris['data'], columns=iris['feature_names'])\n",
         "df['target'] = iris['target']\n",
         "display(df)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -220,13 +202,15 @@
         "id": "O7RtypFBAZx3"
       },
       "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
         "X = df.drop('target',axis=1)\n",
         "t = df['target']\n",
         "\n",
         "X_train, X_test, t_train, t_test = train_test_split(X, t, test_size=0.3, random_state=0)\n",
         "X_train2, X_val, t_train2, t_val = train_test_split(X_train, t_train, test_size=0.3, random_state=0)"
       ],
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -241,7 +225,7 @@
         "val_accuracy = []\n",
         "w = [1, 1, 1]"
       ],
-      "execution_count": 17,
+      "execution_count": 11,
       "outputs": []
     },
     {
