--- a/KmeansExercise.ipynb
+++ b/KmeansExercise.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "KmeansExercise.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMwnk/oFbx/LfGxZoxFACBE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,12 +29,188 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sebjMqbizz1P"
+        "id": "sebjMqbizz1P",
+        "outputId": "ce3132a5-2763-4f30-de12-d6673cae9607",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        }
       },
       "source": [
-        ""
+        "import pandas as pd\n",
+        "from sklearn.datasets import load_iris\n",
+        "import numpy as np\n",
+        "from tensorflow.keras import layers, models, Input, Model\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.cluster import KMeans\n",
+        "\n",
+        "iris = load_iris()\n",
+        "target_names = iris['target_names']\n",
+        "\n",
+        "df = pd.DataFrame(iris['data'], columns=iris['feature_names'])\n",
+        "df['target'] = iris['target']\n",
+        "display(df)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>sepal length (cm)</th>\n",
+              "      <th>sepal width (cm)</th>\n",
+              "      <th>petal length (cm)</th>\n",
+              "      <th>petal width (cm)</th>\n",
+              "      <th>target</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>5.1</td>\n",
+              "      <td>3.5</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>4.9</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>4.7</td>\n",
+              "      <td>3.2</td>\n",
+              "      <td>1.3</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4.6</td>\n",
+              "      <td>3.1</td>\n",
+              "      <td>1.5</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5.0</td>\n",
+              "      <td>3.6</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>145</th>\n",
+              "      <td>6.7</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.2</td>\n",
+              "      <td>2.3</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>146</th>\n",
+              "      <td>6.3</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>1.9</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>147</th>\n",
+              "      <td>6.5</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.2</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>148</th>\n",
+              "      <td>6.2</td>\n",
+              "      <td>3.4</td>\n",
+              "      <td>5.4</td>\n",
+              "      <td>2.3</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>149</th>\n",
+              "      <td>5.9</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.1</td>\n",
+              "      <td>1.8</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>150 rows × 5 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     sepal length (cm)  sepal width (cm)  ...  petal width (cm)  target\n",
+              "0                  5.1               3.5  ...               0.2       0\n",
+              "1                  4.9               3.0  ...               0.2       0\n",
+              "2                  4.7               3.2  ...               0.2       0\n",
+              "3                  4.6               3.1  ...               0.2       0\n",
+              "4                  5.0               3.6  ...               0.2       0\n",
+              "..                 ...               ...  ...               ...     ...\n",
+              "145                6.7               3.0  ...               2.3       2\n",
+              "146                6.3               2.5  ...               1.9       2\n",
+              "147                6.5               3.0  ...               2.0       2\n",
+              "148                6.2               3.4  ...               2.3       2\n",
+              "149                5.9               3.0  ...               1.8       2\n",
+              "\n",
+              "[150 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WvWpjbUW3Vmy"
+      },
+      "source": [
+        "kmeans = KMeans(n_clusters=3)\n",
+        "kmeans.fit(df.drop(columns=['target']))\n",
+        "y_kmeans = kmeans.predict(df.drop(columns=['target']))"
+      ],
+      "execution_count": 2,
       "outputs": []
     }
   ]
