Changed error to inertia

--- a/KmeansExercise.ipynb
+++ b/KmeansExercise.ipynb
@@ -52,7 +52,7 @@
         "df['target'] = iris['target']\n",
         "display(df)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -222,10 +222,10 @@
         "plt.plot(range(1, 11), error)\n",
         "plt.title('Elbow method')\n",
         "plt.xlabel('Number of clusters')\n",
-        "plt.ylabel('Error')\n",
+        "plt.ylabel('Inertia')\n",
         "plt.show()"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -259,7 +259,7 @@
         "\n",
         "display(y_kmeans)"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -316,7 +316,7 @@
         "\n",
         "print(f'Precision = {p}\\nRecall = {r}\\nF1 Score = {f1}')"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +355,7 @@
         "plt.ylabel('sepal width (cm)')\n",
         "plt.show()"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -380,7 +380,7 @@
       "source": [
         ""
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     }
   ]
