--- a/NLP_Exercise.ipynb
+++ b/NLP_Exercise.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled",
       "provenance": [],
-      "authorship_tag": "ABX9TyMwnk/oFbx/LfGxZoxFACBE",
+      "authorship_tag": "ABX9TyP112zv8Yx3iA2wd+wFMndI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,186 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qISnP5cXbdTZ"
+        "id": "RXuG7uxciWAy",
+        "outputId": "2f0ac751-afb9-4a51-b41c-79412d0ff7a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "!rm -r csc466-project\n",
+        "!git clone https://github.com/ANGELLOPARR/csc466-project.git"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'csc466-project'...\n",
+            "remote: Enumerating objects: 65, done.\u001b[K\n",
+            "remote: Counting objects: 100% (65/65), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (59/59), done.\u001b[K\n",
+            "remote: Total 65 (delta 23), reused 26 (delta 4), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (65/65), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CP0IrVG7i3Pr",
+        "outputId": "67e351aa-9d84-483b-bba9-3e3b1d8dfc18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ls"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "csc466-project\tsample_data\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qISnP5cXbdTZ",
+        "outputId": "5435d8f9-4a5c-43d8-fec9-2e71ca1dc685",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 424
+        }
+      },
+      "source": [
+        "import numpy as np # linear algebra\n",
+        "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+        "\n",
+        "dataset = pd.read_csv(r'csc466-project/emails.csv')\n",
+        "dataset .columns #Index(['text', 'spam'], dtype='object')\n",
+        "dataset.shape  #(5728, 2)\n",
+        "dataset"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>text</th>\n",
+              "      <th>spam</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Subject: naturally irresistible your corporate...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Subject: the stock trading gunslinger  fanny i...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Subject: unbelievable new homes made easy  im ...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Subject: 4 color printing special  request add...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Subject: do not have money , get software cds ...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5723</th>\n",
+              "      <td>Subject: re : research and development charges...</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5724</th>\n",
+              "      <td>Subject: re : receipts from visit  jim ,  than...</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5725</th>\n",
+              "      <td>Subject: re : enron case study update  wow ! a...</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5726</th>\n",
+              "      <td>Subject: re : interest  david ,  please , call...</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5727</th>\n",
+              "      <td>Subject: news : aurora 5 . 2 update  aurora ve...</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5728 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                                   text  spam\n",
+              "0     Subject: naturally irresistible your corporate...     1\n",
+              "1     Subject: the stock trading gunslinger  fanny i...     1\n",
+              "2     Subject: unbelievable new homes made easy  im ...     1\n",
+              "3     Subject: 4 color printing special  request add...     1\n",
+              "4     Subject: do not have money , get software cds ...     1\n",
+              "...                                                 ...   ...\n",
+              "5723  Subject: re : research and development charges...     0\n",
+              "5724  Subject: re : receipts from visit  jim ,  than...     0\n",
+              "5725  Subject: re : enron case study update  wow ! a...     0\n",
+              "5726  Subject: re : interest  david ,  please , call...     0\n",
+              "5727  Subject: news : aurora 5 . 2 update  aurora ve...     0\n",
+              "\n",
+              "[5728 rows x 2 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
     }
   ]
 }
